# ai-learning-loop

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-lock.txt  requirements.txt  run.py  rxconfig.py
.claude/: settings.json
.claude/rules/: agents-layer.md  core-layer.md  design-decisions.md  engineering-principles.md  testing.md  ui-layer.md  workflow-layer.md
.github/workflows/: ci.yml
.streamlit/: config.toml
agents/: _base.py  opponent.py  presenter.py  referee.py
core/: model.py  model_store.py  prompts.py  schemas.py  state.py
rxweb/: __init__.py  rxweb.py  state.py
rxweb/assets/: fonts.css
scripts/: cleanup.py  ghost_probe.py  integration_test_real.py
socratic_loop/: __init__.py  __main__.py
socratic_loop/agents/: __init__.py  _base.py  opponent.py  presenter.py  referee.py
socratic_loop/core/: __init__.py  logging.py  model_store.py  prompts.py  schemas.py  settings.py  state.py
socratic_loop/infra/: __init__.py  connection_test.py  env.py  logging.py  model.py  model_store.py  providers.py
socratic_loop/workflow/: __init__.py  graph.py
tests/: helpers.py  mock_nodes.py  test_agents.py  test_base.py  test_connection_test.py  test_integration.py  test_interfaces.py  test_model.py  test_model_factory.py  test_model_store.py  test_providers.py  test_scripts.py  test_smoke.py  test_workflow.py
ui/: app.py  model_settings.py  style.css  style.py
web/: __init__.py  _globals.py  app.py  chat.py  model_settings.py  providers.py  settings.py  state.py  streaming.py  styles.py  web.py
workflow/: graph.py
