# ═══════════════════════════════════════════════════════════════════════════
# ai-learning-loop —— 苏格拉底式学习引导系统
# ═══════════════════════════════════════════════════════════════════════════
# 本文件是项目打包、依赖与工具的权威配置入口。
#
# 安装方式:
#   pip install -e ".[dev]"        # 开发安装（可编辑模式）
#   pip install -e ".[dev,test]"   # 包含测试工具
#   pip install .                  # 生产安装
#
# 构建分发:
#   python -m build                # 生成 wheel + sdist
#   twine upload dist/*            # 发布到 PyPI
#
# 运行应用:
#   ai-learning-loop               # console_scripts 入口
#   python -m ai-learning-loop     # 模块运行入口
# ═══════════════════════════════════════════════════════════════════════════

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

# ── 项目元数据（PEP 621） ─────────────────────────────────────────────────

[project]
name = "ai-learning-loop"
dynamic = ["version"]
description = "苏格拉底式学习引导系统 —— 基于 LangGraph 的三智能体苏格拉底式提问与认知深化模型"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "ai-learning-loop contributors"},
]
maintainers = [
    {name = "ai-learning-loop contributors"},
]
keywords = [
    "langgraph",
    "langchain",
    "socratic",
    "learning",
    "ai",
    "llm",
    "reflex",
    "education",
    "chatbot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: LangChain",
]

# ── 运行时依赖 ─────────────────────────────────────────────────────────────

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0.0",
    "reflex>=0.9.0",
    "python-dotenv>=1.0.0",
]

# ── 可选依赖组 ─────────────────────────────────────────────────────────────

[project.optional-dependencies]
# 开发工具：lint + type check + 构建
dev = [
    "ruff>=0.8.0",
    "mypy>=2.0",
    "pyright>=1.1.400",
    "build>=1.0",
    "twine>=5.0",
]
# 测试工具
test = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23.0",
]
# CI = dev + test 的合集
ci = [
    "ruff>=0.8.0",
    "mypy>=2.0",
    "pyright>=1.1.400",
    "pytest>=9.0",
    "pytest-asyncio>=0.23.0",
    "build>=1.0",
    "twine>=5.0",
]

# ── 入口点 ─────────────────────────────────────────────────────────────────

[project.scripts]
# 主应用入口：安装后可直接在命令行运行 `ai-learning-loop`
ai-learning-loop = "socratic_loop.__main__:main"
# 图导出工具
debate-graph = "socratic_loop.workflow.graph:export_graph"

# 支持 `python -m socratic_loop` 运行
[tool.setuptools]
py-modules = []

[project.urls]
Homepage = "https://github.com/zhuhe/ai-learning-loop"
Documentation = "https://github.com/zhuhe/ai-learning-loop#readme"
Repository = "https://github.com/zhuhe/ai-learning-loop"
Issues = "https://github.com/zhuhe/ai-learning-loop/issues"
Changelog = "https://github.com/zhuhe/ai-learning-loop/blob/main/CHANGELOG.md"

# ── 包发现与数据 ───────────────────────────────────────────────────────────

[tool.setuptools.dynamic]
version = {attr = "socratic_loop.__init__.__version__"}

[tool.setuptools.packages.find]
include = ["socratic_loop*", "web*"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.setuptools.package-data]
# Web 静态资源
web = ["assets/*", "assets/**/*"]
# 配置文件模板
socratic_loop = ["py.typed"]

# ── 开发工具配置 ───────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["venv", ".git", "__pycache__", ".pytest_cache", ".mypy_cache", ".ruff_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4", "RUF100"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = "test_*.py"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
files = ["socratic_loop/core/", "socratic_loop/agents/", "socratic_loop/infra/", "socratic_loop/workflow/"]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["socratic_loop", "web", "tests"]
exclude = ["venv"]
reportMissingTypeStubs = false
reportPrivateUsage = "none"
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = "none"
reportMissingTypeArgument = "none"
reportMissingParameterType = "none"
